@@ -1,3 +1,13 @@
+2022-12-12  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/interface.cpp (log_filesetup): Setup (simple) file-based logger
+	* R/RcppExports.R: R accessor
+	* src/RcppExports.cpp: Autogenerated export for C level access
+	* inst/include/RcppSpdlog_RcppExports.h: Idem
+	* inst/include/rcpp_sink.h: Added #include
+	* man/log_setup.Rd: Added documentation
+	* inst/include/spdl.h: Added in spdl namespace
+
 2022-12-02  Dirk Eddelbuettel  <edd@debian.org>
 
 	* README.md: Mention the new spdl package
